--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-use": "^17.5.1"
+    "react-use": "^17.5.1",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
