--- a/package.json
+++ b/package.json
@@ -13,23 +13,29 @@
     "@react-hookz/web": "^24.0.4",
     "@react-three/drei": "^9.88.4",
     "@react-three/fiber": "^8.14.6",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "bowser": "^2.11.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
+    "isomorphic-dompurify": "^2.14.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-inview": "^4.5.1",
     "react-use": "^17.5.1",
-    "zustand": "^4.5.5",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
