--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.12.5",
     "isomorphic-dompurify": "^2.14.0",
     "next": "14.2.4",
+    "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-inview": "^4.5.1",
