--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-hookz/web": "^24.0.4",
     "@react-three/drei": "^9.88.4",
     "@react-three/fiber": "^8.14.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "bowser": "^2.11.0",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "isomorphic-dompurify": "^2.14.0",
+    "lucide-react": "^0.454.0",
     "next": "14.2.4",
     "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-inview": "^4.5.1",
     "react-use": "^17.5.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.149.0",
+    "vaul": "^1.1.1",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
